site-transition/loader/header :: height vh to prevent scroll on ios

--- a/src/scss/ui/_site-header.scss
+++ b/src/scss/ui/_site-header.scss
@@ -4,6 +4,8 @@
 .site-header {
   $self: &;
 
+  height: calc(var(--vh) * 100);
+
   &__wrap {
     transition: opacity 350ms linear, color 0ms 350ms linear;
   }
