--- a/src/scss/ui/_site-loader.scss
+++ b/src/scss/ui/_site-loader.scss
@@ -1,3 +1,5 @@
 .site-loader {
   $self: &;
+
+  height: calc(var(--vh) * 100);
 }
