--- a/src/scss/ui/_site-transition.scss
+++ b/src/scss/ui/_site-transition.scss
@@ -1,3 +1,5 @@
 .site-transition {
   $self: &;
+
+  height: calc(var(--vh) * 100);
 }
